--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "facturas-react",
+  "name": "ejercicio-senyores-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/open-sans": "^4.2.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/user-event": "^12.8.1",
+    "luxon": "^1.26.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -21,7 +27,36 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "quotes": [
+        "error",
+        "double"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "no-console": "off",
+      "comma-dangle": "off",
+      "arrow-parens": "off",
+      "no-unused-vars": "off",
+      "no-extra-boolean-cast": "off",
+      "no-else-return": "off",
+      "no-plusplus": "off",
+      "no-debugger": "off",
+      "prefer-destructuring": "off",
+      "no-use-before-define": "off",
+      "no-restricted-syntax": "off",
+      "no-shadow": "off",
+      "no-underscore-dangle": "off",
+      "func-names": "off",
+      "max-len": "off",
+      "consistent-return": "off",
+      "space-before-function-paren": "off",
+      "no-param-reassign": "off",
+      "no-restricted-globals": "off"
+    }
   },
   "browserslist": {
     "production": [
