--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ejercicio-senyores-react",
+  "name": "ejercicio-facturas-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && export NODE_ENV=production",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
